# skill-openapi-bridge

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/skill_openapi_bridge/: __init__.py  __main__.py  cli.py  generate.py  server.py
tests/: test_cli.py  test_generate.py  test_server.py  test_spec_contract.py
tests/fixtures/: brainstorming-topic-dialog-creative-mentor-en-openapi-spec.json
