[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-openapi-bridge"
version = "0.2.0"
description = "Bridge between agentskills.io SKILL.md packages and a local OpenAPI server"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "roebi", email = "roebi@users.noreply.github.com" }]
requires-python = ">=3.13"
keywords = ["agentskills", "openapi", "skill", "agent", "bridge", "agentskills.io"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "hatch>=1.12.0",
]

[project.scripts]
skill-openapi-bridge = "skill_openapi_bridge.cli:app"

[project.urls]
Homepage = "https://github.com/roebi/skill-openapi-bridge"
Repository = "https://github.com/roebi/skill-openapi-bridge"
Issues = "https://github.com/roebi/skill-openapi-bridge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_openapi_bridge"]
